open-telemetry/otel-collector/k8s/otelcol-k8s.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: otelcol-k8s
spec:
  selector:
    matchLabels:
      app: otelcol-k8s
  template:
    metadata:
      labels:
        app: otelcol-k8s
    spec:
      serviceAccountName: otelcol-k8s-sa
      containers:
      - name: otelcol-k8s
        image: otelcol:v1
        command:
        - "/otelcol-contrib"
        - "--config=/conf/otelcol-k8s-config"
        ports:
        - containerPort: 4317 # OTLP gRPC
        - containerPort: 4318 # OTLP HTTP
        volumeMounts:
        - name: otelcol-k8s-config
          mountPath: /conf
        - name: journal
          mountPath: /var/log/journal
          readOnly: true
        - name: varlogpods
          mountPath: /var/log/pods
          readOnly: true
      volumes:
        - name: otelcol-k8s-config
          configMap:
            name: otelcol-k8s-config
            items:
              - key: otelcol-k8s-config
                path: otelcol-k8s-config
        - name: journal
          hostPath:
            path: /var/log/journal/
            type: Directory
        - name: varlogpods
          hostPath:
            path: /var/log/pods
