open-telemetry/otel-collector/k8s/otelcol-gateway-backend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otelcol-gateway
spec:
  selector:
    matchLabels:
      app: otelcol-gateway
  template:
    metadata:
      labels:
        app: otelcol-gateway
    spec:
      serviceAccountName: otelcol-gateway-sa
      containers:
      - name: otelcol-gateway
        image: otelcol:v1
        command:
        - "/otelcol-contrib"
        - "--config=/conf/otelcol-gateway-config"
        ports:
        - containerPort: 4317 # OTLP gRPC
        - containerPort: 4318 # OTLP HTTP
        volumeMounts:
        - name: otelcol-gateway-config
          mountPath: /conf
      volumes:
        - name: otelcol-gateway-config
          configMap:
            name: otelcol-gateway-config
            items:
              - key: otelcol-gateway-config
                path: otelcol-gateway-config
---
apiVersion: v1
kind: Service
metadata:
  name: otelcol-gateway
spec:
  ports:
  - name: otlp-grpc
    port: 4317
    targetPort: 4317
  - name: otlp-http
    port: 4318
    targetPort: 4318
  selector:
    app: otelcol-gateway
