open-telemetry/otel-collector/k8s/ing-otelcol-gateway.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otel-col-devops
  namespace: monitoring
spec:
  ingressClassName: traefik
  rules:
  - host: otelcol-gateway.node-02
    http:
      paths:
      - backend:
          service:
            name: otelcol-gateway
            port:
              number: 4318
        path: /
        pathType: Prefix
